--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
@@ -37,9 +38,10 @@
     },
     "rules": {}
   },
-
   "eslint.workingDirectories": [
-    {"mode": "auto"}    
+    {
+      "mode": "auto"
+    }
   ],
   "browserslist": [
     "> 1%",
